# rtmp_publish_sdk

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/fdk-aac/: CMakeLists.txt
src/rtmp/: CMakeLists.txt  adts.c  dbg_internal.h  h264_decode.c  h264_decode.h  rtmp_wapper.c  rtmp_wapper.h
src/sample/: CMakeLists.txt  main.c  public.h
src/sample/config/: ini.c  ini.h
src/sample/include/: data_struct.h  devsdk.h
src/sample/ipc/: ipc.c  ipc.h
src/sample/ipc/aj/: aj_ipc.c
src/sample/ipc/simulator/: simulator.c
src/sample/log/: log.c  log.h
src/sample/mqtt/: sockets.c  sockets.h
