include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/config)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/log)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/mqtt)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../rtmp)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} DIR_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/config DIR_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/log DIR_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/mqtt DIR_SRCS)
add_executable(rtmp-sample ${DIR_SRCS})
target_link_libraries(rtmp-sample pthread)
foreach(f IN LISTS DIR_SRCS)
  get_filename_component(b ${f} NAME)
  set_source_files_properties(${f} PROPERTIES
    COMPILE_DEFINITIONS "__FILENAME__=\"${b}\"")
endforeach()
