include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/config)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/log)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/mqtt)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ipc)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../rtmp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../rtmp/librtmp)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} DIR_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/config DIR_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/log DIR_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/mqtt DIR_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ipc DIR_SRCS)
if (${TARGET_DEVICE} STREQUAL "simulator")
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ipc/simulator DIR_SRCS)
else()
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ipc/aj DIR_SRCS)
endif()
message(${CMAKE_CURRENT_SOURCE_DIR}/../fdk-aac/output/${HOST}/lib)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../fdk-aac/output/${HOST}/lib)
if (CROSS_COMPILE)
    link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/aj)
endif()
add_executable(rtmp-sample ${DIR_SRCS})
if (CROSS_COMPILE)
    target_link_libraries(rtmp-sample rtmp fdk-aac devsdk tools pthread m)
else()
    target_link_libraries(rtmp-sample rtmp fdk-aac pthread m)
endif()

foreach(f IN LISTS DIR_SRCS)
  get_filename_component(b ${f} NAME)
  set_source_files_properties(${f} PROPERTIES
    COMPILE_DEFINITIONS "__FILENAME__=\"${b}\"")
endforeach()
